plugins {
  id 'java'
  id 'org.openjfx.javafxplugin'
  id 'application'
}

group = 'com.pnambic.depanfx'
sourceCompatibility = '17'

repositories {
  // Use Maven Central for resolving dependencies.
  mavenCentral()
}

javafx {
  version = "20"
  modules = [ 'javafx.controls' ]
}

dependencies {
  implementation project(':FxJoglMod')
}

application {
  applicationName = "JavaFX et JOGL"
  mainClass = "com.pnambic.jogldemo.JoglApp"
  mainModule = 'pnambic.jogldemo'
  applicationDefaultJvmArgs= [
    '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
    '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
    '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
    '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED' ]
}
